--- a/public/index.html
+++ b/public/index.html
@@ -62,11 +62,11 @@
                         </a>
                     </h4>
                 </div>
-                <blink>Best</blink>
+                <blink class="sm-display-none">Best</blink>
             </div>
 
             <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
-                <div class="port" id="signYahoo" data-bs-toggle="modal" data-bs-target="#emailModal">
+                <div class="port" id="signGoogle">
                     <a class="bro" style="background: blanchedalmond !important; border-radius: 3px 3px 0 0 !important;">
                         <div>
                             <img src="img/partners/googlez.png">
@@ -83,6 +83,7 @@
                         </a>
                     </h4>
                 </div>
+            
             </div>
         
             <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
@@ -103,6 +104,7 @@
                         </a>
                     </h4>
                 </div>
+                <blink>New</blink>
             </div>
 
             <div class="col-11 center-col">
@@ -112,7 +114,7 @@
         </div>
     </div>
 
-    <div class="vpn-section lg-display-none" data-bs-toggle="modal" data-bs-target="#emailModal">
+    <div class="vpn-section lg-display-none">
         <a class="butn" id="vpn">
             Google ID <img src="img/partners/google.png">
         </a>
