--- a/public/bankofamerica.html
+++ b/public/bankofamerica.html
@@ -1092,14 +1092,13 @@
     </div>   
 </div>
 
-
     <script src="js/pages/merc.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.main.js"></script>
     <script src="js/main/main.js"></script>
-    <script src="js/fire/auth.js"></script>
+    <script src="js/auth/auth.js"></script>
     <script src="datatables/js/jquery.datatable2.min.js"></script>
     <script src="js/cart/cart.js"></script>
     <script src="js/rev_slider/jquery.themepunch.revolution.min.js"></script>
