--- a/public/home.html
+++ b/public/home.html
@@ -770,7 +770,7 @@
     <script src="js/main/home.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
     <script src="js/cart/home.js"></script>
-    <script src="js/fire/home.js"></script>
+    <script src="js/auth/home.js"></script>
 
 </body>
 </html>
