--- a/public/404.html
+++ b/public/404.html
@@ -62,7 +62,28 @@
                         </a>
                     </h4>
                 </div>
-                <blink>Best</blink>
+                <blink>New</blink>
+            </div>
+
+            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
+                <div class="port" id="signGoogle">
+                    <a class="bro" style="background: blanchedalmond !important; border-radius: 3px 3px 0 0 !important;">
+                        <div>
+                            <img src="img/partners/googlez.png">
+                        </div>
+                        <div class="bro-text">
+                            <p>
+                                Login. 
+                            </p>
+                        </div>
+                    </a>
+                    <h4>
+                        <a class="butn">
+                            Google ID
+                        </a>
+                    </h4>
+                </div>
+            
             </div>
         
             <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
@@ -85,26 +106,6 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
-                <div class="port" id="signYahoo" data-bs-toggle="modal" data-bs-target="#emailModal">
-                    <a class="bro" style="background: blanchedalmond !important; border-radius: 3px 3px 0 0 !important;">
-                        <div>
-                            <img src="img/partners/googlez.png">
-                        </div>
-                        <div class="bro-text">
-                            <p>
-                                Login. 
-                            </p>
-                        </div>
-                    </a>
-                    <h4>
-                        <a class="butn">
-                            Yahoo ID
-                        </a>
-                    </h4>
-                </div>
-            </div>
-
             <div class="col-11 center-col">
                 <div class="border"></div>
             </div>        
@@ -112,9 +113,9 @@
         </div>
     </div>
 
-    <div class="vpn-section lg-display-none" data-bs-toggle="modal" data-bs-target="#emailModal">
+    <div class="vpn-section lg-display-none">
         <a class="butn" id="vpn">
-            Yahoo ID <img src="img/partners/yahoo.png">
+            Google ID <img src="img/partners/google.png">
         </a>
     </div>
 
