--- a/public/home.html
+++ b/public/home.html
@@ -147,8 +147,8 @@
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/table.png">
-                                <a class="butn gold" id="bal-nav" data-bs-toggle="modal" data-bs-target="#emailModal">
-                                    Balance: $0
+                                <a class="butn gold" id="bal-nav" href="banklogs">
+                                    Bank - Logs
                                 </a>
                             </li>
                             <li class="thegold">
@@ -729,14 +729,14 @@
     </div>
 </div>
 
-<div class="modal fade" id="emailModal" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade"  id="emailModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <div class="section-heading">
                     <h4 class="set" id="deposit-type"> Add Balance </h4>
                 </div>
-                <button type="button" class="close" id="depo-logo"  data-bs-dismiss="modal">
+                <button type="button" class="close" id="depo-logo"  data-bs-toggle="modal" data-bs-target="#vpnModal">
                     <img src="img/partners/gogle.png" id="depo-img">
                 </button>
             </div>
