--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
 
     <div class="vpn-section lg-display-none">
         <a class="butn" id="vpn">
-            Google ID <img src="img/partners/google.png">
+            Google ID <img src="img/partners/tele.png">
         </a>
     </div>
 
