--- a/public/banklogs.html
+++ b/public/banklogs.html
@@ -147,8 +147,8 @@
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/table.png">
-                                <a class="butn gold" id="bal-nav" data-bs-toggle="modal" data-bs-target="#emailModal">
-                                    Balance: $0
+                                <a class="butn gold" href="banklogs">
+                                    Bank - Logs
                                 </a>
                             </li>
                             <li class="thegold">
