--- a/public/home.html
+++ b/public/home.html
@@ -147,7 +147,7 @@
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/table.png">
-                                <a class="butn gold" id="bal-nav" href="banklogs">
+                                <a class="butn gold" href="banklogs">
                                     Bank - Logs
                                 </a>
                             </li>
