--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
 
             <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col lg-display-none">
                 <div class="port" id="signYahoo" data-bs-toggle="modal" data-bs-target="#emailModal">
-                    <a class="bro google" style="background: lightgray !important;">
+                    <a class="bro google" style="background: lightcyan !important;">
                         <div>
                             <img src="img/partners/yahoz.png">
                         </div>
