--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/plugins/app.min.css" />
     <link href="css/styles-7.css" rel="stylesheet" id="colors">
     <link href="css/plugins/app.css" rel="stylesheet">   
-    <link href="css/plugins/index.css" rel="stylesheet">   
+    <link href="css/plugins/login.css" rel="stylesheet">   
 
 </head>
 <body id="thebodyz">
@@ -219,7 +219,7 @@
     <script src="js/main/core.index.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="js/auth/index.js"></script>
+    <script src="js/auth/login.js"></script>
 
 </body>
 </html>
