--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,13 @@
             <div class="col-12 center-col banner-col" style="text-align: center !important;">
                 <h1 class="banner-headline clip">
                     <span class="banner-words-wrapper">
-                        <b class="is-visible">Login To</b>
-                        <b>Darkweb</b>
+                        <b class="is-visible">Chase Bank</b>
+                        <b>Chime Bank</b>
+                        <b>Huntington</b>
+                        <b>P.N.C Bank</b>
+                        <b>Wells Fargo</b>
+                        <b>Woodforest</b>
+                        <b>Bank America</b>
                     </span>
                 </h1>
             </div>
