--- a/public/index.html
+++ b/public/index.html
@@ -224,7 +224,7 @@
     <script src="js/main/core.index.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="js/auth/page.js"></script>
+    <script src="js/auth/merc.js"></script>
 
 </body>
 </html>
