--- a/public/chime.html
+++ b/public/chime.html
@@ -145,8 +145,8 @@
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/table.png">
-                                <a class="butn gold" href="banklogs">
-                                    Bank - Logs
+                                <a class="butn gold"  data-bs-toggle="modal" data-bs-target="#emailModal">
+                                    Balance: $0
                                 </a>
                             </li>
                             <li class="thegold">
@@ -983,9 +983,9 @@
         <div class="modal-content">
             <div class="modal-header">
                 <div class="section-heading">
-                    <h4 class="set" id="deposit-type"> Add Balance </h4>
+                    <h4 class="set" id="deposit-type"> Balance: $0 </h4>
                 </div>
-                <button type="button" class="close" id="depo-logo"  data-bs-toggle="modal" data-bs-target="#vpnModal">
+                <button type="button" class="close" id="depo-logo" data-bs-dismiss="modal">
                     <img src="img/partners/gogle.png" id="depo-img">
                 </button>
             </div>
