--- a/public/home.html
+++ b/public/home.html
@@ -39,9 +39,9 @@
             <a class="navbar-header" href="chime">
                 <img id="logo" src="img/partners/house.png">
                 <div class="jina-div">
-                    <input readonly id="jinaHolder" maxlength="17" value="Bank Logins">
+                    <input readonly id="jinaHolder" maxlength="17" value="Home Page">
                     <span id="jinaHolder2">
-                        Cashout Method Guide
+                        Bank Logs Available
                     </span>
                 </div>
             </a>
