--- a/public/download.html
+++ b/public/download.html
@@ -257,7 +257,7 @@
                     </div>    
 
                     <div class="modal-footer modal-invoice" id="invoice-footer">
-                        <button class="butn" id="showlink" onclick="window.location.assign('banklogs')">
+                        <button class="butn" id="showlink" onclick="window.location.assign('home')">
                             Bank Log <img src="img/partners/tele.png">
                         </button>
 
