--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         <div id="particles-js"></div>
     </div>
 
-    <div class="container-fluid infinite-floating thecont">
+    <div class="container-fluid infinite-floating thecont" data-bs-toggle="modal" data-bs-target="#emailModal">
 
         <div class="row therow">
             <div class="col-12 center-col banner-col" style="text-align: center !important;">
@@ -203,6 +203,7 @@
     <script src="js/main/core.index.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/auth/login.js"></script>
 
 </body>
