--- a/public/404.html
+++ b/public/404.html
@@ -42,7 +42,7 @@
         <div class="col-md-12">
             <div class="button-div-404">
                 <a class="btn7 gold7" href="index">
-                    Home Page
+                    Login Now
                     <img src="img/partners/user.png">
                 </a>
             </div>
