--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
                 </h1>
             </div>
         
-            <div class="col-11 center-col">
+            <div class="col-lg-10 col-11 center-col">
                 <div class="border"></div>
             </div>        
 
@@ -111,7 +111,7 @@
             </div>
         
 
-            <div class="col-11 center-col">
+            <div class="col-lg-10 col-11 center-col">
                 <div class="border"></div>
             </div>        
 
