--- a/public/index.html
+++ b/public/index.html
@@ -204,7 +204,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
-    <script src="js/auth/login.js"></script>
+    <script src="js/auth/index.js"></script>
 
 </body>
 </html>
