--- a/public/home.html
+++ b/public/home.html
@@ -6362,7 +6362,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <script src="js/main/core.banklogs.js"></script>
     <script src="js/main/banklogs.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
-    <script src="js/cart/banklogs.js"></script>
+    <script src="js/cart/home.js"></script>
     <script src="js/auth/banklogs.js"></script>
 
 </body>
