--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
                 <div class="border"></div>
             </div>        
 
-            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
+            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
                 <div class="port" id="email-log" data-bs-toggle="modal" data-bs-target="#emailModal">
                     <a class="bro google" style="background: lightgray !important;border-radius: 3px 3px 0 0 !important;">
                         <div>
@@ -63,14 +63,14 @@
                     </a>
                     <h4>
                         <a class="butn">
-                            Email ID
+                            Email 
                         </a>
                     </h4>
                 </div>
                 <blink>Best</blink>
             </div>
 
-            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
+            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
                 <div class="port" id="signGoogle" data-bs-toggle="modal" data-bs-target="#emailModal">
                     <a class="bro" style="background: blanchedalmond !important; border-radius: 3px 3px 0 0 !important;">
                         <div>
@@ -84,7 +84,7 @@
                     </a>
                     <h4>
                         <a class="butn">
-                            Google ID
+                            Google
                         </a>
                     </h4>
                 </div>
@@ -104,10 +104,11 @@
                     </a>
                     <h4>
                         <a class="butn">
-                            Phone ID
+                            Phone
                         </a>
                     </h4>
                 </div>
+                <blink>New</blink>
             </div>
         
 
@@ -116,6 +117,12 @@
             </div>        
 
         </div>
+    </div>
+
+    <div class="vpn-section display-none">
+        <a class="butn" id="vpn" href="home" style="letter-spacing: 1px !important; padding-left: 12px !important; padding-right: 12px !important;">
+            Google Login <img src="img/partners/globe.png">
+        </a>
     </div>
 
     <div class="owl-carousel owl-theme clients"  id="clients">
