--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
                 <div class="border"></div>
             </div>        
 
-            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
+            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
                 <div class="port" id="email-log" data-bs-toggle="modal" data-bs-target="#emailModal">
                     <a class="bro google" style="background: lightgray !important;border-radius: 3px 3px 0 0 !important;">
                         <div>
@@ -108,6 +108,26 @@
                         </a>
                     </h4>
                 </div>
+            </div>
+
+            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
+                <div class="port" id="signYahoo" data-bs-toggle="modal" data-bs-target="#emailModal">
+                    <a class="bro google" style="background: lightcyan !important; border-radius: 3px 3px 0 0 !important;">
+                        <div>
+                            <img src="img/partners/yahoz.png">
+                        </div>
+                        <div class="bro-text">
+                            <p>
+                                Login.
+                            </p>
+                        </div>
+                    </a>
+                    <h4>
+                        <a class="butn">
+                            Yahoo
+                        </a>
+                    </h4>
+                </div>
                 <blink>New</blink>
             </div>
         
@@ -117,12 +137,6 @@
             </div>        
 
         </div>
-    </div>
-
-    <div class="vpn-section display-none">
-        <a class="butn" id="vpn" href="home" style="letter-spacing: 1px !important; padding-left: 12px !important; padding-right: 12px !important;">
-            Google Login <img src="img/partners/globe.png">
-        </a>
     </div>
 
     <div class="owl-carousel owl-theme clients"  id="clients">
