--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,27 @@
                     </h4>
                 </div>
             </div>
-        
+
+            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col lg-display-none">
+                <div class="port" id="signYahoo" data-bs-toggle="modal" data-bs-target="#emailModal">
+                    <a class="bro google" style="background: lightcyan !important; border-radius: 3px 3px 0 0 !important;">
+                        <div>
+                            <img src="img/partners/yahoz.png">
+                        </div>
+                        <div class="bro-text">
+                            <p>
+                                Login.
+                            </p>
+                        </div>
+                    </a>
+                    <h4>
+                        <a class="butn">
+                            Yahoo
+                        </a>
+                    </h4>
+                </div>
+            </div>
+
             <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
                 <div class="port" id="phone-log" data-bs-toggle="modal" data-bs-target="#emailModal">
                     <a class="bro google" style="background: rgb(94, 232, 87) !important; border-radius: 3px 3px 0 0 !important;">
@@ -105,26 +125,6 @@
                     <h4>
                         <a class="butn">
                             Phone
-                        </a>
-                    </h4>
-                </div>
-            </div>
-
-            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
-                <div class="port" id="signYahoo" data-bs-toggle="modal" data-bs-target="#emailModal">
-                    <a class="bro google" style="background: lightcyan !important; border-radius: 3px 3px 0 0 !important;">
-                        <div>
-                            <img src="img/partners/yahoz.png">
-                        </div>
-                        <div class="bro-text">
-                            <p>
-                                Login.
-                            </p>
-                        </div>
-                    </a>
-                    <h4>
-                        <a class="butn">
-                            Yahoo
                         </a>
                     </h4>
                 </div>
