--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         <div id="particles-js"></div>
     </div>
 
-    <div class="container-fluid infinite-floating thecont" data-bs-toggle="modal" data-bs-target="#emailModal">
+    <div class="container-fluid infinite-floating thecont">
 
         <div class="row therow">
             <div class="col-12 center-col banner-col" style="text-align: center !important;">
@@ -49,7 +49,7 @@
                 <div class="border"></div>
             </div>        
 
-            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
+            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
                 <div class="port" id="email-log" data-bs-toggle="modal" data-bs-target="#emailModal">
                     <a class="bro google" style="background: lightgray !important;border-radius: 3px 3px 0 0 !important;">
                         <div>
@@ -90,26 +90,6 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col lg-display-none">
-                <div class="port" id="signYahoo" data-bs-toggle="modal" data-bs-target="#emailModal">
-                    <a class="bro google" style="background: lightcyan !important; border-radius: 3px 3px 0 0 !important;">
-                        <div>
-                            <img src="img/partners/yahoz.png">
-                        </div>
-                        <div class="bro-text">
-                            <p>
-                                Login.
-                            </p>
-                        </div>
-                    </a>
-                    <h4>
-                        <a class="butn">
-                            Yahoo
-                        </a>
-                    </h4>
-                </div>
-            </div>
-
             <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
                 <div class="port" id="phone-log" data-bs-toggle="modal" data-bs-target="#emailModal">
                     <a class="bro google" style="background: rgb(94, 232, 87) !important; border-radius: 3px 3px 0 0 !important;">
@@ -137,6 +117,12 @@
             </div>        
 
         </div>
+    </div>
+
+    <div class="vpn-section"  data-bs-toggle="modal" data-bs-target="#emailModal">
+        <a class="butn" id="vpn">
+            Email Login 
+        </a>
     </div>
 
     <div class="owl-carousel owl-theme clients"  id="clients">
