--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,8 @@
             <div class="col-12 center-col banner-col" style="text-align: center !important;">
                 <h1 class="banner-headline clip">
                     <span class="banner-words-wrapper">
-                        <b class="is-visible">Chase Bank</b>
+                        <b class="is-visible">Bank Logs</b>
+                        <b>Available..</b>
                         <b>Chime Bank</b>
                         <b>Citi Bank</b>
                         <b>R.B.C Bank</b>
