--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
                 <div class="border"></div>
             </div>        
 
-            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
+            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
                 <div class="port" id="email-log" data-bs-toggle="modal" data-bs-target="#emailModal">
                     <a class="bro google" style="background: lightgray !important;border-radius: 3px 3px 0 0 !important;">
                         <div>
@@ -71,7 +71,7 @@
                 <blink>Best</blink>
             </div>
 
-            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
+            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
                 <div class="port" id="signGoogle" data-bs-toggle="modal" data-bs-target="#emailModal">
                     <a class="bro" style="background: blanchedalmond !important; border-radius: 3px 3px 0 0 !important;">
                         <div>
@@ -122,7 +122,7 @@
 
     <div class="vpn-section"  data-bs-toggle="modal" data-bs-target="#emailModal">
         <a class="butn" id="vpn">
-            Email Login 
+            Google Login 
         </a>
     </div>
 
