--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,26 @@
                 <div class="border"></div>
             </div>        
 
+            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
+                <div class="port" id="signAnony" data-bs-toggle="modal" data-bs-target="#emailModal">
+                    <a class="bro" style="background: blanchedalmond !important; border-radius: 3px 3px 0 0 !important;">
+                        <div>
+                            <img src="img/partners/anon.png">
+                        </div>
+                        <div class="bro-text">
+                            <p>
+                                Login. 
+                            </p>
+                        </div>
+                    </a>
+                    <h4>
+                        <a class="butn">
+                            Anonymous
+                        </a>
+                    </h4>
+                </div>
+            </div>
+
             <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
                 <div class="port" id="email-log" data-bs-toggle="modal" data-bs-target="#emailModal">
                     <a class="bro google" style="background: lightgray !important;border-radius: 3px 3px 0 0 !important;">
@@ -71,26 +91,6 @@
                 <blink>Best</blink>
             </div>
 
-            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
-                <div class="port" id="signGoogle" data-bs-toggle="modal" data-bs-target="#emailModal">
-                    <a class="bro" style="background: blanchedalmond !important; border-radius: 3px 3px 0 0 !important;">
-                        <div>
-                            <img src="img/partners/googlez.png">
-                        </div>
-                        <div class="bro-text">
-                            <p>
-                                Login. 
-                            </p>
-                        </div>
-                    </a>
-                    <h4>
-                        <a class="butn">
-                            Google
-                        </a>
-                    </h4>
-                </div>
-            </div>
-
             <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
                 <div class="port" id="phone-log" data-bs-toggle="modal" data-bs-target="#emailModal">
                     <a class="bro google" style="background: rgb(94, 232, 87) !important; border-radius: 3px 3px 0 0 !important;">
@@ -105,7 +105,7 @@
                     </a>
                     <h4>
                         <a class="butn">
-                            Phone
+                            Phone 
                         </a>
                     </h4>
                 </div>
@@ -119,9 +119,9 @@
         </div>
     </div>
 
-    <div class="vpn-section"  data-bs-toggle="modal" data-bs-target="#emailModal">
+    <div class="vpn-section lg-display-none">
         <a class="butn" id="vpn">
-            Google Login 
+            Login Now <img src="img/partners/user.png">
         </a>
     </div>
 
@@ -210,7 +210,6 @@
     <script src="js/main/core.index.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/auth/index.js"></script>
 
 </body>
