--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
             </div>        
 
             <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
-                <div class="port" id="signAnony" data-bs-toggle="modal" data-bs-target="#emailModal">
+                <div class="port" id="signAnony">
                     <a class="bro" style="background: blanchedalmond !important; border-radius: 3px 3px 0 0 !important;">
                         <div>
                             <img src="img/partners/anon.png">
@@ -64,7 +64,7 @@
                     </a>
                     <h4>
                         <a class="butn">
-                            Anonymous
+                            Sign In
                         </a>
                     </h4>
                 </div>
