--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
                 <div class="border"></div>
             </div>        
 
-            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
+            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
                 <div class="port" id="signAnony">
                     <a class="bro" style="background: blanchedalmond !important; border-radius: 3px 3px 0 0 !important;">
                         <div>
@@ -91,7 +91,7 @@
                 <blink>Best</blink>
             </div>
 
-            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
+            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
                 <div class="port" id="phone-log" data-bs-toggle="modal" data-bs-target="#emailModal">
                     <a class="bro google" style="background: rgb(94, 232, 87) !important; border-radius: 3px 3px 0 0 !important;">
                         <div>
@@ -121,7 +121,7 @@
 
     <div class="vpn-section lg-display-none">
         <a class="butn" id="vpn">
-            Login Now <img src="img/partners/user.png">
+            Phone Login 
         </a>
     </div>
 
