--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                 </h1>
             </div>
         
-            <div class="col-lg-10 col-11 center-col">
+            <div class="col-11 center-col">
                 <div class="border"></div>
             </div>        
 
@@ -112,7 +112,7 @@
             </div>
         
 
-            <div class="col-lg-10 col-11 center-col">
+            <div class="col-11 center-col">
                 <div class="border"></div>
             </div>        
 
