--- a/public/download.html
+++ b/public/download.html
@@ -177,7 +177,7 @@
         <div class="row no-margin-bottom therow">
 
             <div class="col-lg-3 col-md-45 col-12" id="invoice-col">
-                <blink id="disb">10% Discount</blink>
+                <blink id="disb">Pending</blink>
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
                         <div class="modal-header" id="discountz">
