--- a/public/home.html
+++ b/public/home.html
@@ -152,8 +152,8 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/comment.png">
-                                <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#vpnModal">
+                                <img src="img/partners/user.png">
+                                <a class="butn gold" id="vpn-nav" data-bs-toggle="modal" data-bs-target="#vpnModal">
                                     
                                 </a>
                             </li>
