--- a/public/index.html
+++ b/public/index.html
@@ -50,26 +50,6 @@
                 <div class="border"></div>
             </div>        
 
-            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
-                <div class="port" id="signAnony">
-                    <a class="bro" style="background: blanchedalmond !important; border-radius: 3px 3px 0 0 !important;">
-                        <div>
-                            <img src="img/partners/anon.png">
-                        </div>
-                        <div class="bro-text">
-                            <p>
-                                Login. 
-                            </p>
-                        </div>
-                    </a>
-                    <h4>
-                        <a class="butn">
-                            Sign In
-                        </a>
-                    </h4>
-                </div>
-            </div>
-
             <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col">
                 <div class="port" id="email-log" data-bs-toggle="modal" data-bs-target="#emailModal">
                     <a class="bro google" style="background: lightgray !important;border-radius: 3px 3px 0 0 !important;">
@@ -111,6 +91,25 @@
                 </div>
             </div>
         
+            <div class="col-lg-3 col-md-65 col-sm-6 col-55 center-col sm-display-none">
+                <div class="port" id="signUps" data-bs-toggle="modal" data-bs-target="#emailModal">
+                    <a class="bro" style="background: blanchedalmond !important; border-radius: 3px 3px 0 0 !important;">
+                        <div>
+                            <img src="img/partners/googlez.png">
+                        </div>
+                        <div class="bro-text">
+                            <p>
+                                Login. 
+                            </p>
+                        </div>
+                    </a>
+                    <h4>
+                        <a class="butn">
+                            Yahoo
+                        </a>
+                    </h4>
+                </div>
+            </div>
 
             <div class="col-11 center-col">
                 <div class="border"></div>
@@ -120,7 +119,7 @@
     </div>
 
     <div class="vpn-section lg-display-none">
-        <a class="butn" id="vpn">
+        <a class="butn" id="vpn"  data-bs-toggle="modal" data-bs-target="#emailModal">
             Login Now <img src="img/partners/user.png">
         </a>
     </div>
