--- a/public/rbc.html
+++ b/public/rbc.html
@@ -202,8 +202,8 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/comment.png">
-                                <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#vpnModal">
+                                <img src="img/partners/user.png">
+                                <a class="butn gold" id="vpn-nav" data-bs-toggle="modal" data-bs-target="#vpnModal">
                                     
                                 </a>
                             </li>
@@ -227,9 +227,6 @@
                     <div id="particles-js"></div> 
                 </div>
                 <img src="img/wall/rbc1.jpg" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgparallax="7" class="rev-slidebg">
-                <div class="tp-caption t-head" data-x="center" data-y="center" data-voffset="[20, 10, 10, 15]" data-fontsize="[72,62,52,46]" data-lineheight="[72,62,52,70]" data-width="[none, none, none, 400]" data-whitespace="[nowrap, nowrap, nowrap, normal]" data-frames='[{"delay":"+700","split":"chars","splitdelay":0.07,"speed":750,"frame":"0","from":"y:150px;sX:1.5;sY:1.5;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power4.easeOut"},{"delay":"wait","speed":1000,"frame":"999","to":"sX:1;sY:1;opacity:0;fb:10px;","ease":"Power4.easeOut"}]' >
-                    Checking Accounts
-                </div>
             </li>
 
             
@@ -240,9 +237,6 @@
                     <div id="particles-vs"></div> 
                 </div>
                 <img src="img/wall/rbc1.jpg" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgparallax="7" class="rev-slidebg">
-                <div class="tp-caption t-head" data-x="center" data-y="center" data-voffset="[20, 10, 10, 15]" data-fontsize="[72,62,52,46]" data-lineheight="[72,62,52,70]" data-width="[none, none, none, 400]" data-whitespace="[nowrap, nowrap, nowrap, normal]" data-frames='[{"delay":"+700","split":"chars","splitdelay":0.07,"speed":750,"frame":"0","from":"y:150px;sX:1.5;sY:1.5;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power4.easeOut"},{"delay":"wait","speed":1000,"frame":"999","to":"sX:1;sY:1;opacity:0;fb:10px;","ease":"Power4.easeOut"}]' >
-                    Savings Accounts
-                </div>
             </li>
         </ul>
     </div>
