--- a/public/chime.html
+++ b/public/chime.html
@@ -176,6 +176,9 @@
                     <div id="particles-js"></div> 
                 </div>
                 <img src="img/wall/chims.jpg" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgparallax="7" class="rev-slidebg">
+                <div class="tp-caption t-head" data-x="center" data-y="center" data-voffset="[20, 10, 10, 15]" data-fontsize="[68,62,48,44]" data-lineheight="[72,62,52,70]" data-width="[none, none, none, 400]" data-whitespace="[nowrap, nowrap, nowrap, normal]" data-frames='[{"delay":"+700","split":"chars","splitdelay":0.07,"speed":750,"frame":"0","from":"y:150px;sX:1.5;sY:1.5;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power4.easeOut"},{"delay":"wait","speed":1000,"frame":"999","to":"sX:1;sY:1;opacity:0;fb:10px;","ease":"Power4.easeOut"}]' >
+                    Spending Accounts
+                </div>
             </li>
 
             
@@ -186,7 +189,9 @@
                     <div id="particles-vs"></div> 
                 </div>
                 <img src="img/wall/chimes.jpg" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgparallax="7" class="rev-slidebg">
-      
+                <div class="tp-caption t-head" data-x="center" data-y="center" data-voffset="[20, 10, 10, 15]" data-fontsize="[68,62,48,44]" data-lineheight="[72,62,52,70]" data-width="[none, none, none, 400]" data-whitespace="[nowrap, nowrap, nowrap, normal]" data-frames='[{"delay":"+700","split":"chars","splitdelay":0.07,"speed":750,"frame":"0","from":"y:150px;sX:1.5;sY:1.5;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power4.easeOut"},{"delay":"wait","speed":1000,"frame":"999","to":"sX:1;sY:1;opacity:0;fb:10px;","ease":"Power4.easeOut"}]' >
+                    Savings Accounts
+                </div>
             </li>
         </ul>
     </div>
