--- a/public/citi.html
+++ b/public/citi.html
@@ -144,14 +144,14 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/table.png">
-                                <a class="butn gold"  data-bs-toggle="modal" data-bs-target="#emailModal">
-                                    Balance: $0
+                                <img src="img/partners/house.png">
+                                <a class="butn gold" href="home">
+                                    Home Page
                                 </a>
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/user.png">
-                                <a class="butn gold" id="vpn-nav" data-bs-toggle="modal" data-bs-target="#vpnModal">
+                                <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#profileModal">
                                     
                                 </a>
                             </li>
@@ -1155,12 +1155,12 @@
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink" onclick="window.location.assign('home')">
+                <button class="butn" id="showlink" onclick="window.location.assign('banklogs')">
                     Bank Log <img src="img/partners/tele.png">
                 </button>
 
-                <button class="butn" id="showtoasts" onclick="window.location.assign('download')">
-                    Checkout <img src="img/partners/doh.png">
+                <button class="butn" id="showtoasts" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Download <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
