--- a/public/deposit.html
+++ b/public/deposit.html
@@ -144,14 +144,14 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/table.png">
-                                <a class="butn gold"  data-bs-toggle="modal" data-bs-target="#emailModal">
-                                    Balance: $0
+                                <img src="img/partners/house.png">
+                                <a class="butn gold" href="home">
+                                    Home Page
                                 </a>
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/user.png">
-                                <a class="butn gold" id="vpn-nav" data-bs-toggle="modal" data-bs-target="#vpnModal">
+                                <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#profileModal">
                                     
                                 </a>
                             </li>
