--- a/public/download.html
+++ b/public/download.html
@@ -145,14 +145,14 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/table.png">
-                                <a class="butn gold"  data-bs-toggle="modal" data-bs-target="#emailModal">
-                                    Balance: $0
+                                <img src="img/partners/house.png">
+                                <a class="butn gold" href="home">
+                                    Home Page
                                 </a>
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/user.png">
-                                <a class="butn gold" id="vpn-nav" data-bs-toggle="modal" data-bs-target="#profileModal">
+                                <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#profileModal">
                                     
                                 </a>
                             </li>
@@ -257,11 +257,11 @@
                     </div>    
 
                     <div class="modal-footer modal-invoice" id="invoice-footer">
-                        <button class="butn" id="showlink" onclick="window.location.assign('home')">
+                        <button class="butn" id="showlink" data-bs-toggle="modal" data-bs-target="#profileModal">
                             Bank Log <img src="img/partners/tele.png">
                         </button>
 
-                        <button class="butn" id="showtoasts" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        <button class="butn" id="showtoasts" onclick="window.location.assign('download')">
                             Download <i class="fas fa-angle-down"></i>
                         </button>
                     </div>
@@ -270,10 +270,8 @@
 
             </div>
 
-
         </div>
     </div>
-
 
 </section>
 
@@ -325,8 +323,8 @@
 
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="home" style="letter-spacing: 1px !important; padding-left: 12px !important; padding-right: 12px !important;">
-            Bank Login <img src="img/partners/globe.png">
+        <a class="butn" id="vpn" href="banklogs">
+            Bank Logs <img src="img/partners/table.png">
         </a>
     </div>
 
