--- a/public/invoice.html
+++ b/public/invoice.html
@@ -138,19 +138,19 @@
            
                             <li class="thegold">
                                 <img id="cart-logo" src="img/logos/logo8.png">
-                                <a class="butn lesnar" id="thetot" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                <a class="butn lesnar" id="thetot" data-bs-toggle="modal" data-bs-target="#vpnModal">
                                     View Cart
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/house.png">
-                                <a class="butn gold" href="home">
-                                    Home Page
+                                <img src="img/partners/table.png">
+                                <a class="butn gold" href="banklogs">
+                                    Bank Login
                                 </a>
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/user.png">
-                                <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#profileModal">
+                                <a class="butn gold" id="vpn-nav" data-bs-toggle="modal" data-bs-target="#profileModal">
                                     
                                 </a>
                             </li>
@@ -194,19 +194,19 @@
                                         <hr class="nohr">
                                         <div class="confirm-div link-first-div">
                                             <div class="invoice">
-                                                <img src="img/partners/bit.png" id="bit-coin">
+                                                <img src="img/partners/table.png" id="bit-coin">
                                                 <a class="butn home-btn" id="btc-check" href="download">
                                                     Checkout Now
                                                 </a>
                                             </div>
                                         </div>
-
                                         <hr class="nohr">
+
                                         <div class="link-second-div confirm-div">
                                             <div class="invoice">
                                                 <img src="img/partners/tele.png">
                                                 <a class="butn ver-btn" id="check-now" data-bs-toggle="modal" data-bs-target="#emailModal">
-                                                    Verify Email ID
+                                                    Email Invoice
                                                 </a>
                                             </div>
                                             <blink>New</blink>
@@ -428,6 +428,8 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/platform/1.3.6/platform.min.js"></script>
     <script src="js/main/core.invoice.js"></script>
     <script src="js/main/invoice.js"></script>
     <script src="js/auth/invoice.js"></script>
