--- a/public/truist.html
+++ b/public/truist.html
@@ -144,14 +144,14 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/house.png">
-                                <a class="butn gold" href="home">
-                                    Home Page
+                                <img src="img/partners/table.png">
+                                <a class="butn gold" href="banklogs">
+                                    Bank Login
                                 </a>
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/user.png">
-                                <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#profileModal">
+                                <a class="butn gold" id="vpn-nav" data-bs-toggle="modal" data-bs-target="#profileModal">
                                     
                                 </a>
                             </li>
