--- a/public/invoice.html
+++ b/public/invoice.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
     <meta name="description" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
-    <title>Verify Mail</title>
+    <title> Email Invoice </title>
     <link rel="shortcut icon" id="nav1" href="img/logos/logo8.png">
     <link rel="apple-touch-icon" id="nav2" href="img/logos/logo8.png">
     <link rel="apple-touch-icon" sizes="72x72" id="nav3" href="img/logos/logo8.png">
@@ -205,7 +205,7 @@
                                         <div class="link-second-div confirm-div">
                                             <div class="invoice">
                                                 <img src="img/partners/tele.png">
-                                                <a class="butn ver-btn" id="check-now" data-bs-toggle="modal" data-bs-target="#emailModal">
+                                                <a class="butn ver-btn" id="check-now" data-bs-toggle="modal" data-bs-target="#profileModal">
                                                     Email Invoice
                                                 </a>
                                             </div>
