--- a/public/download.html
+++ b/public/download.html
@@ -261,7 +261,7 @@
                             Bank Log <img src="img/partners/tele.png">
                         </button>
 
-                        <button class="butn" id="showtoasts" onclick="window.location.assign('download')">
+                        <button class="butn" id="showtoasts"  data-bs-toggle="modal" data-bs-target="#exampleModal">
                             Download <i class="fas fa-angle-down"></i>
                         </button>
                     </div>
